# stalwart-mta-hook-types

./: .gitignore  Cargo.toml  LICENSE  LICENSE-MIT  README.md
src/: lib.rs  modifications.rs  request.rs  response.rs
