# SPDX-FileCopyrightText: 2020 Stalwart Labs LLC <hello@stalw.art>
# SPDX-FileCopyrightText: 2025 Franz Dietrich <dietrich@teilgedanken.de>
#
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "stalwart_mta_hook_types"
version = "0.1.1"
edition = "2021"
authors = ["Franz Dietrich <dietrich@teilgedanken.de>"]
description = "Rust type definitions for Stalwart Mail Transfer Agent (MTA) hooks"
license = "MIT OR Apache-2.0"
repository = "https://github.com/enaut/stalwart-mta-hook-types"
homepage = "https://github.com/enaut/stalwart-mta-hook-types"
documentation = "https://docs.rs/stalwart_mta_hook_types"
readme = "README.md"
keywords = ["stalwart", "mta", "mail", "smtp", "hooks"]
categories = ["email", "web-programming", "api-bindings"]
exclude = [".*", "*.bak", "target/"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
